Fix: Overflow service card-text

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -120,13 +120,12 @@ main {
     align-items: center;
     justify-content: center;
 
-    outline: 5px solid #323;
+    outline: 3px solid #323;
     box-shadow: 0px 0px 15px 5px #323 inset;
     
-    padding: 30px;
+    padding: 10px;
 
     .card-text {
-        padding: 10px;
         font-size: clamp(.8rem, 2.5vw, 1.2rem);
         text-align: center;
     }
@@ -323,6 +322,10 @@ main {
 @media(min-width: 1028px) {
     .services-cont {
         gap: 5rem;
+    }
+
+    .card-back {
+        padding: 30px;
     }
 
     .br-info {
